user AVG aggregation as well